--- a/website/core/templates/core/page_news.html
+++ b/website/core/templates/core/page_news.html
@@ -10,7 +10,7 @@
         <div class="container-fluid">
 
             <div class="row">
-                <div class="col">
+                <div class="col-lg-3">
                     <br>
                     <div class="dropdown">
                         <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -24,7 +24,7 @@
                     </div>
 
                 </div>
-                <div class="col-lg-8 col-md-8 mx-auto">
+                <div class="col-lg-6 col-md-6">
                     <a href=""><img class="card-img-top" src="{{ new.imagem }}"></a>
 
                     <div class="post-heading">
@@ -39,18 +39,18 @@
                     </div>
                 </div>
 
-                <div class="col"><!--LATERAL DIREITA-->
-                    <br>
+                <div class="col-lg-3">
+                                        <br>
                     <div class="btn btn-success">
                         <a target="_blank" href="https://www.amazon.com.br/gp/product/B079ZLLXVF/ref=s9u_ri_gw_i3?ie=UTF8&amp;pd_rd_i=B079ZLLXVF&amp;pd_rd_r=d360f2e5-4eea-11e8-a0f8-f19795331bad&amp;pd_rd_w=nEBNt&amp;pd_rd_wg=wdQgT&amp;pf_rd_m=A1ZZFT5FULY4LN&amp;pf_rd_s=&amp;pf_rd_r=360HHZAX2K1GKGRM8JW1&amp;pf_rd_t=36701&amp;pf_rd_p=609c0aae-865b-4b45-8c5b-6c0bf8b16e37&amp;pf_rd_i=desktop&_encoding=UTF8&tag=amazon03f0b-20&linkCode=ur2&linkId=352487fadfec5fbfd4b7aec2df38f641&camp=1789&creative=9325">
                             <b class="text-white">Ajude o site</b>
                         </a>
                     </div>
-                    <a href="https://www.amazon.com.br/Smartphone-Motorola-dourado-Camera-Brides/dp/B075FBWWF3/ref=as_li_ss_il?pf_rd_i=16243890011&pf_rd_m=A3RN7G7QC5MWSZ&pf_rd_p=726eb85d-4038-41f0-bb69-8b47c8919edb&pf_rd_r=5FZSXWVYEBM1BRQCV22B&pf_rd_s=merchandised-search-3&pf_rd_t=101&qid=1525364738&sr=1-9&ref=sr_1_9&linkCode=li3&tag=amazon03f0b-20&linkId=dbf453e1412d095f449420e6ed747049" target="_blank">
+                     <a href="https://www.amazon.com.br/Smartphone-Motorola-dourado-Camera-Brides/dp/B075FBWWF3/ref=as_li_ss_il?pf_rd_i=16243890011&pf_rd_m=A3RN7G7QC5MWSZ&pf_rd_p=726eb85d-4038-41f0-bb69-8b47c8919edb&pf_rd_r=5FZSXWVYEBM1BRQCV22B&pf_rd_s=merchandised-search-3&pf_rd_t=101&qid=1525364738&sr=1-9&ref=sr_1_9&linkCode=li3&tag=amazon03f0b-20&linkId=dbf453e1412d095f449420e6ed747049" target="_blank">
                         <img border="0" src="//ws-na.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=B075FBWWF3&Format=_SL250_&ID=AsinImage&MarketPlace=BR&ServiceVersion=20070822&WS=1&tag=amazon03f0b-20" ></a><img src="https://ir-br.amazon-adsystem.com/e/ir?t=amazon03f0b-20&l=li3&o=33&a=B075FBWWF3" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
                     <img src="//ir-br.amazon-adsystem.com/e/ir?t=amazon03f0b-20&l=ur2&o=33" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
 
-                </div>
+                </div> 
 
             </div>
 
